header section added

--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
         font-family: "Noto Serif Bengali", serif;
     }
 </style>
-
-
 </head>
 <body>
     
+    <header class="bg-[#b80000] h-[80px] flex items-center">
+        <div class="w-8/12 mx-auto">
+            <!-- logo -->
+             <img src="assest/logo.png" alt="">
+        </div>
+    </header>
+
+
 </body>
 </html>
