categories section added

--- a/index.html
+++ b/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBC Bangla</title>
     <!-- tailwind cdn  -->
-     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-     <!-- google fonts  -->
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Bengali:wght@100..900&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- google fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Bengali:wght@100..900&display=swap"
+        rel="stylesheet">
 
-<style>
-    *{
-        font-family: "Noto Serif Bengali", serif;
-    }
-</style>
+    <style>
+        * {
+            font-family: "Noto Serif Bengali", serif;
+        }
+    </style>
 </head>
+
 <body>
-    
+
     <header class="bg-[#b80000] h-[80px] flex items-center">
         <div class="w-8/12 mx-auto">
             <!-- logo -->
-             <img src="assest/logo.png" alt="">
+            <img src="assest/logo.png" alt="">
         </div>
     </header>
 
 
+    <main>
+
+        <!-- categories section  -->
+        <section class="border-b-1 border-gray-300">
+            <div class="w-8/12 mx-auto h-[48px]">
+                <div class="flex gap-5">
+                    <p class="py-2 font-semibold text-xl cursor-pointer border-red-800 hover:border-b-4">
+                        মূলপাতা
+                    </p>
+                    <p class="py-2 font-semibold text-xl cursor-pointer border-red-800 hover:border-b-4">
+                        মূলপাতা
+                    </p>
+                </div>
+            </div>
+        </section>
+
+
+    </main>
+
 </body>
+
 </html>
