categories section api called and functionality added

--- a/index.html
+++ b/index.html
@@ -35,13 +35,8 @@
         <!-- categories section  -->
         <section class="border-b-1 border-gray-300">
             <div class="w-8/12 mx-auto h-[48px]">
-                <div class="flex gap-5">
-                    <p class="py-2 font-semibold text-xl cursor-pointer border-red-800 hover:border-b-4">
-                        মূলপাতা
-                    </p>
-                    <p class="py-2 font-semibold text-xl cursor-pointer border-red-800 hover:border-b-4">
-                        মূলপাতা
-                    </p>
+                <div id="cat-container" class="flex gap-7">
+                   
                 </div>
             </div>
         </section>
@@ -49,6 +44,7 @@
 
     </main>
 
+    <script src="script/script.js"></script>
 </body>
 
 </html>
