news category section added with toggling feature and functionality

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
         <!-- categories section  -->
         <section class="border-b-1 border-gray-300">
-            <div class="w-8/12 mx-auto h-[48px]">
-                <div id="cat-container" class="flex gap-7">
-                   
-                </div>
-            </div>
+            <ul id="category-container" class="w-8/12 mx-auto h-[48px] flex gap-7 list-none">
+            </ul>
         </section>
+
+
+        
 
 
     </main>
