news container section added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
         </section>
 
 
-        
+        <!-- news-container section  -->
+        <section id="news-container" class="w-8/12 mx-auto grid grid-cols-4 gap-5">
+
+        </section>
 
 
     </main>
