--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <header class="bg-[#b80000] h-[80px] flex items-center">
-        <div class="w-8/12 mx-auto">
+        <div class="w-9/12 mx-auto">
             <!-- logo -->
             <img src="assest/logo.png" alt="">
         </div>
@@ -34,13 +34,13 @@
 
         <!-- categories section  -->
         <section class="border-b-1 border-gray-300">
-            <ul id="category-container" class="w-8/12 mx-auto h-[48px] flex gap-7 list-none">
+            <ul id="category-container" class="w-9/12 mx-auto  flex flex-wrap gap-7 list-none">
             </ul>
         </section>
 
 
         <!-- news-container section  -->
-        <section id="news-container" class="w-8/12 mx-auto grid grid-cols-4 gap-5">
+        <section id="news-container" class="w-9/12 mx-auto grid md:grid-cols-4 gap-5 py-5">
 
         </section>
 
