loading animation added using daisy ui

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Bengali:wght@100..900&display=swap"
         rel="stylesheet">
 
+        <!-- daisy ui cdn  -->
+         <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+
     <style>
         * {
             font-family: "Noto Serif Bengali", serif;
@@ -41,7 +44,9 @@
 
         <!-- news-container section  -->
         <section id="news-container" class="w-9/12 mx-auto grid md:grid-cols-4 gap-5 py-5">
-
+            <div class="flex justify-center items-center col-span-4">
+                <span class="loading loading-ring loading-xl w-48 h-48"></span>
+            </div>
         </section>
 
 
