--- a/index.html
+++ b/index.html
@@ -47,10 +47,23 @@
             <div class="flex justify-center items-center col-span-4">
                 <span class="loading loading-ring loading-xl w-48 h-48"></span>
             </div>
+            
         </section>
 
 
     </main>
+
+
+<dialog id="modal" class="modal">
+  <div class="modal-box">
+    <div id="modal-container"></div>
+    <div class="modal-action">
+      <form method="dialog">
+        <button class="btn">Close</button>
+      </form>
+    </div>
+  </div>
+</dialog>
 
     <script src="script/script.js"></script>
 </body>
