footer section added

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Bengali:wght@100..900&display=swap"
         rel="stylesheet">
 
-        <!-- daisy ui cdn  -->
-         <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <!-- daisy ui cdn  -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
 
     <style>
         * {
@@ -47,23 +47,54 @@
             <div class="flex justify-center items-center col-span-4">
                 <span class="loading loading-ring loading-xl w-48 h-48"></span>
             </div>
-            
+
         </section>
 
 
     </main>
 
 
-<dialog id="modal" class="modal">
-  <div class="modal-box">
-    <div id="modal-container"></div>
-    <div class="modal-action">
-      <form method="dialog">
-        <button class="btn">Close</button>
-      </form>
-    </div>
-  </div>
-</dialog>
+    <footer class="mt-32 bg-gray-900 text-white">
+        <div class="bg-[#b80000] h-[80px] flex items-center">
+            <div class="w-9/12 mx-auto">
+                <!-- logo -->
+                <img src="assest/logo.png" alt="">
+            </div>
+        </div>
+
+        <div class="w-9/12 mx-auto space-y-5 py-10 pb-5">
+            <div class="border-b-1 border-gray-500 pb-5">
+                <p>বিবিসির ওপর কেন আপনি আস্থা রাখতে পারেন</p>
+            </div>
+            <div class="grid md:grid-cols-6 ">
+                <p>ব্যবহারের শর্তাবলী</p>
+                <p>প্রিভেসি নীতি</p>
+                <p>বিবিসির সাথে যোগাযোগ করুন</p>
+            </div>
+            <div class="grid md:grid-cols-6  border-b-1 border-gray-500 pb-5">
+                <p>বিবিসি সম্পর্কে</p>
+                <p>কুকিজ</p>
+                <p>অন্যান্য ভাষায় বিবিসির সংবাদ</p>
+            </div>
+            <div>
+                <p>
+                    © 2025 বিবিসি। বাইরের কোন সাইটের তথ্যের জন্য বিবিসি দায়বদ্ধ নয়। বাইরের লিংক সম্পর্কে বিবিসির দৃষ্টিভঙ্গি সম্বন্ধে পড়ুন।
+                </p>
+            </div>
+        </div>
+    </footer>
+
+
+    <dialog id="modal" class="modal">
+        <div class="modal-box">
+            <div id="modal-container"></div>
+            <div class="modal-action">
+                <form method="dialog">
+                    <button class="btn">Close</button>
+                </form>
+            </div>
+        </div>
+    </dialog>
 
     <script src="script/script.js"></script>
 </body>
